cmake_minimum_required(VERSION 3.22)
project(pwm C)

set(CMAKE_C_STANDARD 11)

include_directories(WiringPi)
include_directories(WiringPi/devLib)
include_directories(WiringPi/examples)
include_directories(WiringPi/wiringPi)
include_directories(WiringPi/wiringPiD)

add_executable(pwm
        WiringPi/devLib/ds1302.c
        WiringPi/devLib/ds1302.h
        WiringPi/devLib/font.h
        WiringPi/devLib/gertboard.c
        WiringPi/devLib/gertboard.h
        WiringPi/devLib/lcd.c
        WiringPi/devLib/lcd.h
        WiringPi/devLib/lcd128x64.c
        WiringPi/devLib/lcd128x64.h
        WiringPi/devLib/maxdetect.c
        WiringPi/devLib/maxdetect.h
        WiringPi/devLib/piFace.c
        WiringPi/devLib/piFace.h
        WiringPi/devLib/piFaceOld.c
        WiringPi/devLib/piGlow.c
        WiringPi/devLib/piGlow.h
        WiringPi/devLib/piNes.c
        WiringPi/devLib/piNes.h
        WiringPi/devLib/scrollPhat.c
        WiringPi/devLib/scrollPhat.h
        WiringPi/devLib/scrollPhatFont.h
        WiringPi/examples/Gertboard/7segments.c
        WiringPi/examples/Gertboard/buttons.c
        WiringPi/examples/Gertboard/gertboard.c
        WiringPi/examples/Gertboard/record.c
        WiringPi/examples/Gertboard/temperature.c
        WiringPi/examples/Gertboard/voltmeter.c
        WiringPi/examples/Gertboard/vumeter.c
        WiringPi/examples/PiFace/blink.c
        WiringPi/examples/PiFace/buttons.c
        WiringPi/examples/PiFace/ladder.c
        WiringPi/examples/PiFace/metro.c
        WiringPi/examples/PiFace/motor.c
        WiringPi/examples/PiFace/reaction.c
        WiringPi/examples/PiGlow/piglow.c
        WiringPi/examples/PiGlow/piGlow0.c
        WiringPi/examples/PiGlow/piGlow1.c
        WiringPi/examples/q2w/binary.c
        WiringPi/examples/q2w/blink-io.c
        WiringPi/examples/q2w/blink.c
        WiringPi/examples/q2w/bright.c
        WiringPi/examples/q2w/button.c
        WiringPi/examples/q2w/volts.c
        WiringPi/examples/scrollPhat/scphat.c
        WiringPi/examples/scrollPhat/test.c
        WiringPi/examples/blink-thread.c
        WiringPi/examples/blink.c
        WiringPi/examples/blink12.c
        WiringPi/examples/blink12drcs.c
        WiringPi/examples/blink6drcs.c
        WiringPi/examples/blink8-drcn.c
        WiringPi/examples/blink8.c
        WiringPi/examples/clock.c
        WiringPi/examples/delayTest.c
        WiringPi/examples/ds1302.c
        WiringPi/examples/header.h
        WiringPi/examples/isr-osc.c
        WiringPi/examples/isr.c
        WiringPi/examples/lcd-adafruit.c
        WiringPi/examples/lcd.c
        WiringPi/examples/lowPower.c
        WiringPi/examples/max31855.c
        WiringPi/examples/nes.c
        WiringPi/examples/okLed.c
        WiringPi/examples/pwm.c
        WiringPi/examples/rht03.c
        WiringPi/examples/serialRead.c
        WiringPi/examples/serialTest.c
        WiringPi/examples/servo.c
        WiringPi/examples/softPwm.c
        WiringPi/examples/softTone.c
        WiringPi/examples/speed.c
        WiringPi/examples/spiSpeed.c
        WiringPi/examples/wfi.c
        WiringPi/gpio/gpio.c
        WiringPi/gpio/readall.c
        WiringPi/wiringPi/ads1115.c
        WiringPi/wiringPi/ads1115.h
        WiringPi/wiringPi/bmp180.c
        WiringPi/wiringPi/bmp180.h
        WiringPi/wiringPi/drcNet.c
        WiringPi/wiringPi/drcNet.h
        WiringPi/wiringPi/drcSerial.c
        WiringPi/wiringPi/drcSerial.h
        WiringPi/wiringPi/ds18b20.c
        WiringPi/wiringPi/ds18b20.h
        WiringPi/wiringPi/htu21d.c
        WiringPi/wiringPi/htu21d.h
        WiringPi/wiringPi/max31855.c
        WiringPi/wiringPi/max31855.h
        WiringPi/wiringPi/max5322.c
        WiringPi/wiringPi/max5322.h
        WiringPi/wiringPi/mcp23008.c
        WiringPi/wiringPi/mcp23008.h
        WiringPi/wiringPi/mcp23016.c
        WiringPi/wiringPi/mcp23016.h
        WiringPi/wiringPi/mcp23016reg.h
        WiringPi/wiringPi/mcp23017.c
        WiringPi/wiringPi/mcp23017.h
        WiringPi/wiringPi/mcp23s08.c
        WiringPi/wiringPi/mcp23s08.h
        WiringPi/wiringPi/mcp23s17.c
        WiringPi/wiringPi/mcp23s17.h
        WiringPi/wiringPi/mcp23x08.h
        WiringPi/wiringPi/mcp23x0817.h
        WiringPi/wiringPi/mcp3002.c
        WiringPi/wiringPi/mcp3002.h
        WiringPi/wiringPi/mcp3004.c
        WiringPi/wiringPi/mcp3004.h
        WiringPi/wiringPi/mcp3422.c
        WiringPi/wiringPi/mcp3422.h
        WiringPi/wiringPi/mcp4802.c
        WiringPi/wiringPi/mcp4802.h
        WiringPi/wiringPi/pcf8574.c
        WiringPi/wiringPi/pcf8574.h
        WiringPi/wiringPi/pcf8591.c
        WiringPi/wiringPi/pcf8591.h
        WiringPi/wiringPi/piHiPri.c
        WiringPi/wiringPi/piThread.c
        WiringPi/wiringPi/pseudoPins.c
        WiringPi/wiringPi/pseudoPins.h
        WiringPi/wiringPi/rht03.c
        WiringPi/wiringPi/rht03.h
        WiringPi/wiringPi/sn3218.c
        WiringPi/wiringPi/sn3218.h
        WiringPi/wiringPi/softPwm.c
        WiringPi/wiringPi/softPwm.h
        WiringPi/wiringPi/softServo.c
        WiringPi/wiringPi/softServo.h
        WiringPi/wiringPi/softTone.c
        WiringPi/wiringPi/softTone.h
        WiringPi/wiringPi/sr595.c
        WiringPi/wiringPi/sr595.h
        WiringPi/wiringPi/wiringPi.c
        WiringPi/wiringPi/wiringPi.h
        WiringPi/wiringPi/wiringPiI2C.c
        WiringPi/wiringPi/wiringPiI2C.h
        WiringPi/wiringPi/wiringPiSPI.c
        WiringPi/wiringPi/wiringPiSPI.h
        WiringPi/wiringPi/wiringSerial.c
        WiringPi/wiringPi/wiringSerial.h
        WiringPi/wiringPi/wiringShift.c
        WiringPi/wiringPi/wiringShift.h
        WiringPi/wiringPi/wpiExtensions.c
        WiringPi/wiringPi/wpiExtensions.h
        WiringPi/wiringPiD/daemonise.c
        WiringPi/wiringPiD/daemonise.h
        WiringPi/wiringPiD/drcNetCmd.h
        WiringPi/wiringPiD/network.c
        WiringPi/wiringPiD/network.h
        WiringPi/wiringPiD/runRemote.c
        WiringPi/wiringPiD/runRemote.h
        WiringPi/wiringPiD/wiringpid.c
        WiringPi/version.h
        pwm.c)
